[gd_scene load_steps=3 format=3 uid="uid://l57caxoq75cx"]

[ext_resource type="Script" path="res://Objects/GameNode.gd" id="1_g8gkn"]
[ext_resource type="Theme" uid="uid://cjgpihteglc0k" path="res://Themes/GameNode.tres" id="2_hjn4l"]

[node name="GameNode" type="Node2D"]
script = ExtResource("1_g8gkn")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(24, 24)
offset_left = -36.0
offset_top = -16.0
offset_right = 36.0
offset_bottom = 17.0
theme = ExtResource("2_hjn4l")

[node name="Focus_cover" type="Panel" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_hjn4l")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "测试用"

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_gui_input"]
